feat(Transaction): Implemented transaction creation
