# docs/swagger.json
@@ -24,13 +24,12 @@
                 "summary": "Create a new account",
                 "parameters": [
                     {
-                        "example": "\"{\\\"document_number\\\": \\\"123456789\\\"}\"",
                         "description": "Create Account",
                         "name": "account",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/github_com_hameedhub_pismo_internal_model.Account"
                         }
                     }
                 ],
@@ -72,6 +71,40 @@
                     }
                 }
             }
+        },
+        "/transactions": {
+            "post": {
+                "description": "Create a new transaction with the input payload",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "transactions"
+                ],
+                "summary": "Create a new transaction",
+                "parameters": [
+                    {
+                        "description": "Create Transaction",
+                        "name": "account",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_hameedhub_pismo_internal_model.Transaction"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_hameedhub_pismo_internal_model.Transaction"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -94,6 +127,35 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "integer"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_hameedhub_pismo_internal_model.Transaction": {
+            "type": "object",
+            "properties": {
+                "account_id": {
+                    "type": "integer"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "event_date": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "operation_type_id": {
+                    "type": "integer"
+                },
+                "transaction_id": {
                     "type": "integer"
                 },
                 "updatedAt": {
